<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Empty state content -->
        <ImageView
            android:layout_width="@dimen/size_image_empty"
            android:layout_height="@dimen/size_image_empty"
            android:contentDescription="@string/empty_items_icon"
            android:src="@drawable/outline_inventory_2_120" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_spacing"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/empty_items_title"
            android:textColor="@android:color/black"
           android:textAppearance="@style/TextAppearance.pos.TitleMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:fontFamily="@font/roboto"
            android:text="@string/empty_items_message"
            android:textAppearance="@style/TextAppearance.pos.LabelMedium"
             />
    </LinearLayout>
</layout>