<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signIn.SignInActivity">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_sign_in_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".15" />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_sign_in_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/tv_sign_in_logo"
            app:layout_constraintEnd_toEndOf="@+id/tv_sign_in_logo"
            app:layout_constraintStart_toStartOf="@+id/tv_sign_in_logo"
            app:layout_constraintTop_toTopOf="@+id/gl_sign_in_top"
            app:srcCompat="@drawable/baseline_point_of_sale_100" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sign_in_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pos"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.pos.DisplayMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imv_sign_in_logo" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sign_in_logo_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/point_of_sale"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.pos.LabelMedium"
            app:layout_constraintEnd_toEndOf="@+id/tv_sign_in_logo"
            app:layout_constraintStart_toStartOf="@+id/tv_sign_in_logo"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sign_in_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginEnd="@dimen/normal_spacing"
            android:layout_marginBottom="@dimen/normal_spacing"
            android:text="@string/keep_an_eye_on_your_sales_and_inventory_at_all_times_and_stay_on_top_of_your_operations"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_spacing"
            app:layout_constraintBottom_toTopOf="@+id/text_sign_in_employee_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/text_sign_in_employee_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/larger_spacing"
            style="@style/Widget.pos.tertiaryButton"
            android:text="@string/or_employee_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
            app:layout_constraintStart_toStartOf="@+id/sign_in_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>